WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167494
[Coordinated Graphics] WebPage shouldn't use the layerTreeHost directly
https://bugs.webkit.org/show_bug.cgi?id=167494
Summary
[Coordinated Graphics] WebPage shouldn't use the layerTreeHost directly
Carlos Garcia Campos
Reported
2017-01-27 01:25:57 PST
In Coordinated Graphics we have a couple of methods that the WebPage uses directly from the layer tree host, instead of using the drawing area interface.
Attachments
Patch
(13.02 KB, patch)
2017-01-27 01:31 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Fix EFL build
(12.10 KB, patch)
2017-01-27 06:28 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-01-27 01:31:30 PST
Created
attachment 299924
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-01-27 06:28:35 PST
Created
attachment 299929
[details]
Fix EFL build
Carlos Garcia Campos
Comment 3
2017-01-29 02:08:01 PST
Committed
r211350
: <
http://trac.webkit.org/changeset/211350
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug