Source/WebKit2/WebProcess/WebPage/LayerTreeHost.h
@@ -71,7 +71,6 @@ public:
     virtual void forceRepaint() = 0;
     virtual bool forceRepaintAsync(uint64_t /*callbackID*/) { return false; }
     virtual void sizeDidChange(const WebCore::IntSize& newSize) = 0;
-    virtual void deviceOrPageScaleFactorChanged() = 0;
     virtual void pageBackgroundTransparencyChanged() = 0;
 
     virtual void pauseRendering();
@@ -85,7 +84,7 @@ public:
 
 #if USE(COORDINATED_GRAPHICS_THREADED)
     virtual void contentsSizeChanged(const WebCore::IntSize&) { };
-    virtual void didChangeViewportProperties(const WebCore::ViewportAttributes&) { };
+    virtual void didChangeViewportAttributes(WebCore::ViewportAttributes&&) { };
 #endif
 
 #if USE(COORDINATED_GRAPHICS)
@@ -94,6 +93,10 @@ public:
 
 #if USE(TEXTURE_MAPPER_GL) && PLATFORM(GTK)
     virtual void setNativeSurfaceHandleForCompositing(uint64_t) { };
+#endif
+
+#if USE(COORDINATED_GRAPHICS) || USE(TEXTURE_MAPPER)
+    virtual void deviceOrPageScaleFactorChanged() = 0;
 #endif
 
     virtual void setViewOverlayRootLayer(WebCore::GraphicsLayer* viewOverlayRootLayer) { m_viewOverlayRootLayer = viewOverlayRootLayer; }
